# rex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
crates/action/: Cargo.toml
crates/action/src/: action.rs  action_node.rs  operation.rs
crates/api/: Cargo.toml
crates/api/src/: launchpad.rs
crates/app/: Cargo.toml
crates/app-context/: Cargo.toml
crates/app-context/src/: app_context.rs
crates/app-macros/: Cargo.toml
crates/app-macros/src/: lib.rs
crates/app/src/: app.rs  app_error.rs  app_options.rs  helpers.rs  lib.rs  prompts.rs  session.rs
crates/app/src/commands/: bin.rs  mod.rs  run.rs  upgrade.rs
crates/app/src/commands/extension/: add.rs  info.rs
crates/app/src/components/: api_list.rs  config_settings.rs
crates/app/src/systems/: analyze.rs  bootstrap.rs  execute.rs  startup.rs
crates/cache/: Cargo.toml
crates/cache-item/: Cargo.toml
crates/cache-item/src/: cache_mode.rs
crates/cache-item/tests/: cache_item_test.rs
crates/cache/src/: cache_engine.rs  hash_engine.rs  lib.rs  state_engine.rs
crates/cache/tests/: cache_engine_test.rs  hash_engine_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: lookup.rs  shared.rs
crates/cli/tests/: ext_test.rs  misc_test.rs  setup_teardown_test.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: env.rs  helpers.rs  lib.rs  path.rs
crates/config/: Cargo.toml
crates/config/src/: config_cache.rs  config_finder.rs  config_loader.rs  extensions_config.rs  inherited_tasks_config.rs  inherited_tasks_manager.rs  lib.rs  project_config.rs  task_config.rs  task_options_config.rs  template_config.rs  toolchains_config.rs  workspace_config.rs
crates/config/src/project/: dep_config.rs  language.rs  overrides_config.rs
crates/config/src/shapes/: input.rs  output.rs  portable_path.rs
crates/config/src/template/: frontmatter.rs
crates/config/src/toolchain/: mod.rs  proto_config.rs  rex_config.rs
crates/config/src/workspace/: constraints_config.rs  docker_config.rs  experiments_config.rs  pipeline_config.rs  remote_config.rs
crates/config/tests/: extensions_config_test.rs  inherited_by_test.rs  inherited_tasks_config_test.rs  input_shape_test.rs  output_shape_test.rs  project_config_test.rs  task_config_test.rs  template_config_test.rs  template_frontmatter_test.rs  toolchains_config_test.rs  utils.rs  workspace_config_test.rs
crates/console/: Cargo.toml
crates/console/src/: lib.rs  reporter.rs
crates/env/: Cargo.toml
crates/env-var/: Cargo.toml
crates/env-var/src/: dotenv_error.rs  global_bag.rs  lib.rs
crates/env-var/tests/: dotenv_test.rs  env_substitutor_test.rs
crates/env/src/: lib.rs
crates/extension-plugin/: Cargo.toml
crates/extension-plugin/src/: extension_plugin.rs  extension_registry.rs  extension_registry_actions.rs
crates/hash/: Cargo.toml
crates/hash/tests/: hasher_test.rs
crates/old_cli/: Cargo.toml
crates/old_cli/src/: app.rs  error.rs  helpers.rs  main.rs  session.rs  systems.rs
crates/old_cli/src/commands/: mcp.rs  mod.rs  run.rs  upgrade.rs  xxx.rs
crates/old_cli/src/components/: aliases_map.rs  env_var.rs  locator.rs  mod.rs  spec_aliases_map.rs  versions_map.rs
crates/old_cli/src/mcp/: mod.rs  resources.rs  server.rs
crates/old_cli/src/utils/: mod.rs  tool_record.rs
crates/old_cli/src/workflows/: exec_workflow.rs  install_workflow.rs
crates/old_cli/tests/: plugin_add_test.rs  plugin_remove_test.rs  plugin_search_test.rs  plugins_test.rs  utils.rs
crates/old_core/: Cargo.toml
crates/old_core/src/: config.rs  config_error.rs  env.rs  env_error.rs  file_manager.rs  helpers.rs  loader.rs  loader_error.rs  lockfile.rs  tool.rs  tool_error.rs  tool_manifest.rs  tool_spec.rs  version_resolver.rs
crates/old_core/src/checksum/: checksum_error.rs  minisign.rs  mod.rs  sha.rs
crates/old_core/src/flow/: build.rs  build_error.rs  detect.rs  detect_error.rs  install.rs  install_error.rs  link.rs  link_error.rs  locate.rs  locate_error.rs  lock.rs  lock_error.rs  manage.rs  manage_error.rs  resolve.rs  resolve_error.rs
crates/old_core/src/layout/: inventory.rs  layout_error.rs  product.rs  shim_registry.rs  store.rs
crates/old_core/src/registry/: data.rs  registry.rs  registry_error.rs
crates/old_core/src/settings/: backends.rs  mod.rs  plugins.rs  settings.rs  tools.rs
crates/old_core/src/utils/: archive.rs  git.rs  process.rs
crates/pdk/: Cargo.toml
crates/pdk-api/: Cargo.toml
crates/pdk-api/src/: _common.rs  action.rs  common.rs  context.rs  extemsion.rs  extension.rs  hooks.rs  host.rs  lib.rs  macros.rs  prompts.rs  subcommand.rs
crates/pdk-api/src/api/: build.rs  mod.rs  source.rs
crates/pdk-api/src/toolchain/: tier1.rs  tier2.rs  tier3.rs
crates/pdk-api/tests/: checksum_test.rs
crates/pdk-test-utils/: Cargo.toml
crates/pdk-test-utils/src/: action_wrapper.rs  config_builder.rs  extension_wrapper.rs  host_func_mocker.rs  lib.rs  sandbox.rs  subcommand_wrapper.rs  toolchain_wrapper.rs  wrapper.rs
crates/pdk/src/: action.rs  args.rs  extension.rs  funcs.rs  helpers.rs  lib.rs  subcommand.rs  toolchain.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: host.rs  lib.rs  plugin.rs  plugin_registry.rs
crates/process/: Cargo.toml
crates/process-augment/: Cargo.toml
crates/process-augment/src/: augmented_command.rs
crates/process/src/: command.rs  command_line.rs  exec_command.rs  lib.rs  process_error.rs  shell.rs  signal.rs
crates/shim/: Cargo.toml
crates/shim/src/: windows.rs
crates/system-env/: Cargo.toml
crates/system-env/src/: helpers.rs
crates/system-env/tests/: pm_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  sandbox.rs
crates/version-spec/: Cargo.toml
crates/version-spec/tests/: calver_test.rs  helpers_test.rs  resolved_spec_test.rs  unresolved_parser_test.rs  unresolved_spec_test.rs
crates/warpgate-api/: Cargo.toml
crates/warpgate-api/src/: host.rs  host_funcs.rs
crates/warpgate-api/tests/: locator_test.rs  virtual_path_test.rs
crates/warpgate-pdk/: Cargo.toml
crates/warpgate-pdk/src/: api.rs  funcs.rs  lib.rs
(+113 files in other folders)
