[package]
name = "rex"
version = "0.1.0"
categories = ["wasm", "command-line-utilities"]
description = "CLI extensible by WASM components"
keywords = ["rex", "cli", "webassembly", "wasm"]
readme = "README.md"
authors = ["Vladimir Gurinovich <vladimir.gurinovich@gmail.com>"]
edition = "2024"
repository = "https://github.com/gurv/rex"

[lib]
name = "rex"
path = "crates/rex/src/lib.rs"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false, features = ["derive", "env", "help", "color", "suggestions", "wrap_help", "cargo", "string"] }
clap-markdown = { version = "0.1.5", default-features = false }
ctrlc = { version = "3.4.7", default-features = false }
dialoguer = { version = "0.11.0", default-features = false, features = ["editor", "password", "zeroize", "fuzzy-select", "fuzzy-matcher"] }
docker_credential = { version = "1.3.1", default-features = false }
etcetera = { version = "0.10.0", default-features = false }
figment = { version = "0.10.19", default-features = false, features = ["json", "env"] }
flate2 = { version = "1.0", default-features = false }
hyper = { version = "1.6.0", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"]}
oci-wasm = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = { version = "2.2", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.15.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi", "time", "json"] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.17.0", default-features = false, features = ["std"] }
wasm-pkg-client = { version = "0.10.0", default-features = false }
wasm-pkg-core = { version = "0.10.0", default-features = false }
wasmcloud-runtime = { git = "https://github.com/wasmCloud/wasmCloud", version = "0.11.0" }
wasmtime = { version = "31", default-features = false }
wasmtime-wasi = { version = "31", default-features = false }
wasmtime-wasi-http = { version = "31", default-features = false }
wit-component = { version = "0.239.0", default-features = false }

[dev-dependencies]
bytes = { version = "1", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
tempfile = { version = "3.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{name}-v{version}/rex-{ target }{ binary-ext }"
pkg-fmt = "bin"
