[workspace]
resolver = "3"
members = ["crates/*", "legacy/core/*", "proto/*"]
exclude = ["tests/fixtures", "wasm/test-plugin"]
default-members = ["crates/cli"]

[workspace.dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
cached = "0.56.0"
chrono = { version = "0.4.44", features = ["serde"] }
cd_env = "0.3.1"
ci_env = "0.4.1"
clap = { version = "4.5.60", default-features = false, features = [
    "derive",
    "std",
    "error-context",
] }
clap_complete = "4.5.66"
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
convert_case = "0.10.0"
daggy = { version = "0.9.0", features = ["serde-1"] }
dirs = "6.0.0"
futures = "0.3.31"
indexmap = "2.13.0"
iocraft = "0.7.18"
md5 = "0.8.0"
miette = "7.6.0"
pathdiff = "0.2.3"
petgraph = { version = "0.8.3", default-features = false, features = [
    "serde-1",
] }
relative-path = { version = "2.0.1" }
regex = { version = "1.12.3", default-features = false, features = [
    "std",
    "perf",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    # We don't use openssl but its required for musl builds
    "native-tls-vendored",
] }
rustc-hash = "2.1.1"
scc = "3.6.9"
schematic = { version = "0.19.4", default-features = false, features = [
    "schema",
] }
serial_test = "3.4.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
starbase = { version = "0.10.9" }
starbase_archive = { version = "0.12.4", default-features = false, features = [
    "miette",
    "tar-all",
    "zip-all",
] }
starbase_args = { version = "0.1.7" }
starbase_console = { version = "0.6.22", features = ["miette"] }
starbase_id = { version = "0.3.2", features = ["miette", "schematic"] }
starbase_sandbox = "0.10.5"
starbase_shell = "0.10.8"
starbase_styles = { version = "0.6.1", features = ["relative-path"] }
starbase_utils = { version = "0.12.6", default-features = false, features = [
    "editor-config",
    "glob-cache",
    "miette",
] }
tera = { version = "1.20.1", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "rt",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

# proto/plugin related
extism = "=1.13.0"
extism-pdk = "1.4.1"

# proto
docker_credential = { version = "1.3.2" }
oci-client = "0.16.1"
once_cell = "1.21.3"
shell-words = "1.1.1"
toml_edit = "0.23.9"
derive_setters = "0.1.9"
human-sort = "0.2.2"
anyhow = "1.0.102"
http-cache-reqwest = "1.0.0-alpha.4"
reqwest-middleware = { version = "0.5.1", default-features = false, features = [
    "charset",
    "http2",
] }
tracing-subscriber = { version = "0.3.22", default-features = false }

[workspace.lints.clippy]
# Very noisy, lots of false positives!
assigning_clones = "allow"

[workspace.metadata.cargo-shear]
ignored = ["serde"]
