[package]
name = "rex_action"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_target = { path = "../target" }
rex_time = { path = "../time" }
indexmap = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["rc"] }
rex_version_spec = { path = "../version-spec"}

[lints]
workspace = true
