[package]
name = "rex_app_context"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_config = { path = "../config" }
rex_console = { path = "../console" }
rex_env = { path = "../env" }
rex_extension_plugin = { path = "../extension-plugin" }

[lints]
workspace = true
