[package]
name = "rex_app"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_action = { path = "../action" }
rex_api = { path = "../api" }
rex_app_context = { path = "../app-context" }
rex_app_macros = { path = "../app-macros" }
rex_cache = { path = "../cache" }
rex_common = { path = "../common" }
rex_config = { path = "../config", features = ["loader", "proto", "tracing"] }
rex_console = { path = "../console" }
rex_env = { path = "../env" }
rex_env_var = { path = "../env-var" }
rex_extension_plugin = { path = "../extension-plugin" }
rex_feature_flags = { path = "../feature-flags" }
rex_pdk_api = { path = "../pdk-api" }
rex_plugin = { path = "../plugin" }
rex_process = { path = "../process" }
rex_process_augment = { path = "../process-augment" }
rex_warpgate_api = { path = "../warpgate-api" }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytes = "1.11.1"
ci_env = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "env",
    "help",
    "string",
    "suggestions",
    "usage",
    "wrap_help",
] }
clap_complete = { workspace = true }
clap_complete_nushell = "4.5.10"
convert_case = { workspace = true }
diff = "0.1.13"
iocraft = { workspace = true }
miette = { workspace = true }
proto_core = { path = "../../proto/core" }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
    "config",
    "schema",
    "renderer_template",
] }
semver = { workspace = true }
serde = { workspace = true }
starbase = { workspace = true }
starbase_archive = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true, features = [
    "editor-config",
    "json",
    "toml",
    "yaml",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rex_version_spec = { path = "../version-spec" }
open = "5.3.3"
petgraph = { workspace = true }
tera = { workspace = true }
tiny_http = "0.12.0"

[lints]
workspace = true
