[package]
name = "rex_cache"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_cache_item = { path = "../cache-item" }
rex_common = { path = "../common" }
rex_env_var = { path = "../env-var" }
rex_hash = { path = "../hash" }
rex_target = { path = "../target" }
rex_time = { path = "../time" }
miette = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "json"] }
tracing = { workspace = true }

[lints]
workspace = true
