[package]
name = "rex_cli"
version = "0.1.0"
description = "CLI..."
keywords = [
    "language",
    "installer",
    "version-manager",
    "dependency-manager",
    "package-manager",
]
categories = ["development-tools"]
readme = "../../README.md"
default-run = "rex"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# [package.metadata.dist]
# dist = true

[package.metadata.release]
publish = false
pre-release-replacements = [
	{ file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
tag-name = "v{{version}}"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
rex_app = { path = "../app" }
rex_common = { path = "../common" }
rex_env_var = { path = "../env-var" }
clap = { workspace = true }
mimalloc = { version = "0.1.48", default-features = false }
proto_shim = "0.8.0"
sigpipe = "0.1.3"
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
extism = { workspace = true }
wasmtime = "~37.0.3"
wasi-common = "~37.0.3"
wiggle = "~37.0.3"
liblzma = { version = "0.4.5", features = ["static"] }

# [dev-dependencies]
# moon_affected = { path = "../affected" }
# moon_cache = { path = "../cache" }
# moon_codegen = { path = "../codegen" }
# moon_config = { path = "../config" }
# moon_task = { path = "../task" }
# moon_task_runner = { path = "../task-runner" }
# moon_test_utils = { path = "../../legacy/old_core/test-utils" }
# moon_test_utils2 = { path = "../test-utils" }
# moon_vcs = { path = "../vcs" }
# httpmock = "0.8.3"
# proto_core = { workspace = true }
# rustc-hash = { workspace = true }
# serial_test = { workspace = true }
# starbase_archive = { workspace = true }
# starbase_sandbox = { workspace = true }
