[package]
name = "rex_cli"
version = "0.1.0"
publish = false
default-run = "rex"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.dist]
dist = true

[package.metadata.release]
publish = false
pre-release-replacements = [
	{ file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
tag-name = "v{{version}}"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
rex_app = { path = "../app" }
rex_common = { path = "../common" }
rex_env_var = { path = "../env-var" }
clap = { workspace = true }
mimalloc = { version = "0.1.48", default-features = false }
rex_proto_shim = { path = "../shim" }
sigpipe = "0.1.3"
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
extism = { workspace = true }
wasmtime = "~37.0.3"
wasi-common = "~37.0.3"
wiggle = "~37.0.3"
liblzma = { version = "0.4.5", features = ["static"] }

[lints]
workspace = true
