[package]
name = "moon_common"
version = "2.0.2"
edition = "2024"
license = "MIT"
description = "Common utilities."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = true

[dependencies]
dirs = { workspace = true }
miette = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
regex = { workspace = true, features = ["unicode"] }
rustc-hash = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_id = { workspace = true }
starbase_styles = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
starbase_archive = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "yaml"] }
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true
