[package]
name = "rex_common"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dirs = { workspace = true }
miette = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
regex = { workspace = true, features = ["unicode"] }
rustc-hash = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_id = { workspace = true }
starbase_styles = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
starbase_archive = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "yaml"] }
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true
