[package]
name = "rex_config"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["loader"]

[dependencies]
rex_common = { path = "../common" }
# rex_target = { path = "../target" }
# rex_old_core = { path = "../old_core" }
rex_version_spec = { path = "../version-spec", features = ["schematic"] }
rex_warpgate_api = { path = "../warpgate-api", features = ["schematic"] }
deserialize_untagged_verbose_error = "0.1.5"
hcl-rs = "0.19.6"
indexmap = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rpkl = "0.7.0"
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"config",
	"env",
	"extends",
	"json",
	"pkl",
	"schema",
	"toml",
	"type_indexmap",
	"type_regex",
	"type_semver",
	"validate",
	"validate_url",
	"yaml",
] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
# version_spec = { workspace = true, features = ["schematic"] }
# warpgate_api = { workspace = true, features = ["schematic"] }
# proto_core = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
# rex_config = { path = ".", features = ["proto", "tracing"] }
rex_config = { path = ".", features = ["tracing"] }
httpmock = "0.8.3"
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []
loader = ["schematic/url"]
# proto = ["loader", "tracing", "dep:rex_old_core"]
tracing = ["dep:tracing"]
