[package]
name = "rex_config"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["loader"]

[dependencies]
rex_common = { path = "../common" }
rex_target = { path = "../target" }
rex_warpgate = { path = "../warpgate" }
rex_warpgate_api = { path = "../warpgate-api" }
deserialize_untagged_verbose_error = "0.1.5"
hcl-rs = "0.19.6"
indexmap = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rpkl = "0.7.0"
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"config",
	"env",
	"extends",
	"json",
	"pkl",
	"schema",
	"toml",
	"type_indexmap",
	"type_regex",
	"type_semver",
	"validate",
	"validate_url",
	"yaml",
] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
rex_version_spec = { path = "../version-spec", features = ["schematic"] }
proto_core = { path = "../../proto/core", optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
loader = ["schematic/url"]
proto = ["loader", "tracing", "dep:proto_core"]
tracing = ["dep:tracing"]

[lints]
workspace = true
