[package]
name = "rex_console"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_action = { path = "../action" }
rex_common = { path = "../common" }
rex_config = { path = "../config" }
rex_target = { path = "../target" }
rex_time = { path = "../time" }
iocraft = { workspace = true }
miette = { workspace = true }
starbase_console = { workspace = true, features = ["ui"] }
starbase_styles = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
