[package]
name = "rex_env"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
miette = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
