[package]
name = "rex_extension_plugin"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_config = { path = "../config" }
rex_pdk_api = { path = "../pdk-api" }
rex_plugin = { path = "../plugin" }
async-trait = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
