[package]
name = "rex_old_cli"
version = "0.1.0"
description = "CLI..."
keywords = [
    "language",
    "installer",
    "version-manager",
    "dependency-manager",
    "package-manager",
]
categories = ["development-tools"]
readme = "../../README.md"
default-run = "rex"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "../../version", search = "^(.+)$", replace = "{{version}}" },
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
rex_old_core = { path = "../old_core", features = ["clap"] }
rex_pdk_api = { path = "../pdk-api" }
rex_system_env = { path = "../system-env" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.44"
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = "4.5.10"
dirs = { workspace = true }
indexmap = { workspace = true }
iocraft = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
rmcp = { workspace = true, features = ["server", "transport-io"] }
rustc-hash = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
starbase = { workspace = true }
starbase_console = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
sysinfo = { version = "0.38.3", default-features = false, features = [
    "system",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# For the shim binary
rust_json = "0.1.6"
sigpipe = "0.1.3"

# For extism/wasmtime
extism = "1.13.0"
wasmtime = "~37.0.3"
wasi-common = "~37.0.3"
wiggle = "~37.0.3"

# Overrides
liblzma = { version = "0.4.6", features = ["static"] }

[dev-dependencies]
starbase_sandbox = { workspace = true }
shared_child = "1.1.1"

[target."cfg(windows)".dependencies]
winreg = { version = "0.56.0", default-features = false }

[features]
default = []
test-plugins = ["rex_old_core/test-plugins"]
