[package]
name = "rex_old_core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_pdk_api = { path = "../pdk-api", features = [
    "schematic",
] }
rex_system_env = { path = "../system-env" }
rex_version_spec = { path = "../version-spec", features = [
    "schematic",
] }
rex_warpgate = { path = "../warpgate", features = [
    "miette",
    "schematic",
] }
clap = { workspace = true, optional = true }
convert_case = "0.11.0"
dirs = { workspace = true }
dotenvy = "0.15.7"
indexmap = { workspace = true }
iocraft = { workspace = true }
miette = { workspace = true }
minisign-verify = "0.2.5"
once_cell = { workspace = true }
oci-client = { workspace = true }
docker_credential = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
schematic = { workspace = true, features = [
    "config",
    "env",
    "toml",
    "type_indexmap",
    "type_regex",
    "type_url",
    "validate",
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
starbase_archive = { workspace = true }
starbase_console = { workspace = true, features = ["ui"] }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "yaml"] }
thiserror = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
rex_old_core = { path = ".", features = ["test-plugins"] }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = []
clap = ["dep:clap"]

# Internal only!
test-plugins = []
