[package]
name = "rex_pdk_api"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_config = { path = "../config" }
rex_system_env = { path = "../system-env" }
rex_version_spec = { path = "../version-spec" }
rex_warpgate_api = { path = "../warpgate-api" }
derive_setters = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"schema_serde",
	"type_semver",
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = [
	"rex_warpgate_api/schematic",
]

# # Ensures everything still works with schematic
# [dev-dependencies]
# rex_pdk_api = { path = ".", features = ["schematic"] }
