[package]
name = "rex_pdk_api"
version = "0.1.0"
publish = true

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_config = { path = "../config" }
derive_setters = "0.1.9"
proto_pdk_api = { path = "../../proto/pdk-api" }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = ["schema_serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
rex_warpgate_api = { path = "../warpgate-api" }

[features]
default = []
schematic = ["rex_warpgate_api/schematic"]

[lints]
workspace = true
