[package]
name = "rex_pdk_test_utils"
version = "0.1.0"
publish = true

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_old_core = { path = "../old_core" }
rex_pdk_api = { path = "../pdk-api" }
rex_warpgate = { path = "../warpgate" }
extism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_id = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []
schema = []
