[package]
name = "rex_pdk_test_utils"
version = "0.1.0"
publish = true

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_pdk_api = { path = "../pdk-api" }
rex_target = { path = "../target" }
extism = { workspace = true }
proto_core = { path = "../../proto/core" }
proto_pdk_api = { path = "../../proto/pdk-api" }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
rex_warpgate = { path = "../warpgate" }

[lints]
workspace = true
