[package]
name = "rex_pdk"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
extism-pdk = { workspace = true }
rex_pdk_api = { path = "../pdk-api" }
rex_warpgate_pdk = { path = "../warpgate-pdk" }
rustc-hash = { workspace = true }
schematic = { workspace = true, optional = true, features = [
	"config",
	"json",
	"validate",
] }
serde = { workspace = true }

[dev-dependencies]
rex_pdk = { path = ".", features = ["tracing"] }

[features]
default = []
tracing = ["rex_warpgate_pdk/tracing"]
