[package]
name = "rex_pdk"
version = "0.1.0"
publish = true

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_pdk_api = { path = "../pdk-api" }
clap = { workspace = true }
extism-pdk = { workspace = true }
schematic = { workspace = true, optional = true, features = [
	"config",
	"json",
	"validate",
] }
serde = { workspace = true }
rustc-hash = { workspace = true }
rex_warpgate_pdk = { path = "../warpgate-pdk" }

[features]
default = []
schematic = ["dep:schematic"]

[lints]
workspace = true
