[package]
name = "rex_plugin"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_config = { path = "../config" }
rex_env = { path = "../env" }
rex_pdk_api = { path = "../pdk-api" }
rex_target = { path = "../target" }
async-trait = { workspace = true }
convert_case = { workspace = true }
extism = { workspace = true }
miette = { workspace = true }
proto_core = { path = "../../proto/core" }
rustc-hash = { workspace = true }
scc = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rex_warpgate = { path = "../warpgate" }

[lints]
workspace = true
