[package]
name = "rex_process"
version = "0.0.1"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_common = { path = "../common" }
rex_console = { path = "../console" }
rex_env_var = { path = "../env-var" }
rex_system_env = { path = "../system-env" }
cached = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
starbase_shell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["io-util", "signal", "sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = [
	"Win32_System_Threading",
] }
