[package]
name = "rex_system_env"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic"]
