[package]
name = "rex_test_utils2"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_app_context = { path = "../app-context" }
rex_cache = { path = "../cache" }
rex_common = { path = "../common" }
rex_config = { path = "../config", features = ["loader", "proto"] }
rex_console = { path = "../console" }
rex_env = { path = "../env" }
rex_extension_plugin = { path = "../extension-plugin" }
rex_plugin = { path = "../plugin" }
extism = { workspace = true }
proto_core = { path = "../../proto/core" }
starbase_sandbox = { workspace = true }
starbase_utils = { workspace = true, features = ["yaml"] }

[lints]
workspace = true
