[package]
name = "rex_version_spec"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
compact_str = { workspace = true }
human-sort = { workspace = true }
regex = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic"]
